--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="navbar-translate">
                 <a class="navbar-brand" rel="tooltip" title="IQuevedoM" data-placement="bottom" target="_blank">
-                    <img class="n-logo" src="iq_crab.jpg" alt="texto">
+                    <img class="n-logo" src="./images/iq_crab.jpg" alt="IQMj">
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
@@ -77,10 +77,10 @@
     <!-- End Navbar -->
     <div class="wrapper">
         <div class="page-header clear-filter" filter-color="orange">
-             <div class="page-header-image" data-parallax="true" style="background-image: url('palma.jpg');">
+             <div class="page-header-image" data-parallax="true" style="background-image: url('./images/palma.jpg');">
             </div>
 
-            <!-- <div class="page-header-image" data-parallax="true" style="background-image: url('https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/img/header.jpg');">
+         <!--    <div class="page-header-image" data-parallax="true" style="background-image: url('https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/img/header.jpg');">
             </div> -->
             <div class="container">
                 <div class="content-center brand">
