--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- End Navbar -->
     <div class="wrapper">
         <div class="page-header clear-filter" filter-color="orange">
-             <div class="page-header-image" data-parallax="true" style="background-image: url('./images/palma.jpg');">
+             <div class="page-header-image" data-parallax="true" style="background-image: url('iquevedom.github.io/images/Palma.jpg');">
             </div>
 
          <!--    <div class="page-header-image" data-parallax="true" style="background-image: url('https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/img/header.jpg');">
