--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- End Navbar -->
     <div class="wrapper">
         <div class="page-header clear-filter" filter-color="orange">
-             <div class="page-header-image" data-parallax="true" style="background-image: url('iquevedom.github.io/images/Palma.jpg');">
+             <div class="page-header-image" data-parallax="true" style="background-image: url('https://iquevedom.github.io/images/Palma.jpg');">
             </div>
 
          <!--    <div class="page-header-image" data-parallax="true" style="background-image: url('https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/img/header.jpg');">
@@ -171,7 +171,9 @@
                         document.write(new Date().getFullYear())
                     </script>, Designed by
                     <a href="https://www.facebook.com/IQCrab" target="_blank">IQ-Crab</a>. Coded by
-                    <a href="https://www.linkedin.com/in/isidro-quevedo" target="_blank">IQuevedo</a>.
+                    <a href="https://www.linkedin.com/in/isidro-quevedo" target="_blank">IQuevedo</a>
+                    <a> Version 1.0 
+                    </a>.
                 </div>
 
 
