--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- START MAIN -->
     <div class="wrapper">
         <div class="page-header clear-filter">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('./src/img/background-image.jpg');"></div>
+            <div class="page-header-image" data-parallax="true" style="background-image: url('iquevedom.github.io/src/img/background-image.jpg');"></div>
             <div class="container">
                 <div class="content-center brand">
                     <h1 class="h1-seo" id="main-title"> DOS <br/> DE JULIO R.L.</h1>
@@ -155,9 +155,9 @@
                 <div class="col">
                     <img 
                         id="team-image" 
-                        src="./src/img/team-1-small.jpg"
-                        srcset="./src/img/team-1-small.jpg 1x,
-                                ./src/img/team-1-big.jpg 2x"
+                        src="iquevedom.github.io/src/img/team-1-small.jpg"
+                        srcset="iquevedom.github.io/src/img/team-1-small.jpg 1x,
+                                .iquevedom.github.io/src/img/team-1-big.jpg 2x"
                     >
                     <h3 id="name" style="margin-bottom: 0px;">Compromiso</h3>
                     <p id="job-title">Medio Ambiente</p>
@@ -165,9 +165,9 @@
                 <div class="col">
                     <img 
                         id="team-image" 
-                        src="./src/img/team-6-small.jpg"
-                        srcset="./src/img/team-6-small.jpg 1x,
-                                ./src/img/team-6-big.jpg 2x"
+                        src="iquevedom.github.io/src/img/team-6-small.jpg"
+                        srcset="iquevedom.github.io/src/img/team-6-small.jpg 1x,
+                                iquevedom.github.io/src/img/team-6-big.jpg 2x"
                     >
                     <h3 id="name" style="margin-bottom: 0px;">Solidaridad</h3>
                     <p id="job-title">Apoyo comunitario</p>
@@ -175,9 +175,9 @@
                 <div class="col">
                     <img 
                         id="team-image" 
-                        src="./src/img/team-8-small.jpg"
-                        srcset="./src/img/team-8-small.jpg 1x,
-                                ./src/img/team-8-big.jpg 2x"
+                        src="iquevedom.github.io/src/img/team-8-small.jpg"
+                        srcset="iquevedom.github.io/src/img/team-8-small.jpg 1x,
+                                iquevedom.github.io/src/img/team-8-big.jpg 2x"
                     >
                     <h3 id="name" style="margin-bottom: 0px;">Comunidad</h3>
                     <p id="job-title">Arboles</p>
@@ -185,9 +185,9 @@
                 <div class="col">
                     <img 
                         id="team-image" 
-                        src="./src/img/team-9-small.jpg"
-                        srcset="./src/img/team-9-small.jpg 1x,
-                                ./src/img/team-9-big.jpg 2x"
+                        src="iquevedom.github.io/src/img/team-9-small.jpg"
+                        srcset="iquevedom.github.io/src/img/team-9-small.jpg 1x,
+                                iquevedom.github.io/src/img/team-9-big.jpg 2x"
                     >
                     <h3 id="name" style="margin-bottom: 0px;">Calidad</h3>
                     <p id="job-title">Aroma-Sabor</p>
