--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>Challenge8</title>
+  <title>Cooperativa Dos de Julio R. L.</title>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <meta name="viewport" content="width=device-width" initial-scale=1/>
@@ -155,9 +155,9 @@
                 <div class="col">
                     <img 
                         id="team-image" 
-                        src=    "iquevedom.github.io/src/img/team-1-small.jpg"
-                        srcset= "iquevedom.github.io/src/img/team-1-small.jpg 1x,
-                                 iquevedom.github.io/src/img/team-1-big.jpg 2x"
+                        src=    "iquevedom.github.io/src/img/team-1-big.jpg"
+                        srcset= "iquevedom.github.io/src/img/team-1-big.jpg 1x,
+                                 iquevedom.github.io/src/img/team-1-small.jpg 2x"
                     >
                     <h3 id="name" style="margin-bottom: 0px;">Compromiso</h3>
                     <p id="job-title">Medio Ambiente</p>
