Cambio en titulo
Cambio en titulo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="content-center brand">
                     <h1 class="h1-seo" id="main-title"> DOS <br/> DE JULIO R.L.</h1>
-                    <h2 id="sub-title">Cooperativa de Café</h2>
+                    <h2 id="sub-title">Cooperativa de Pequeños Productores Café</h2>
                 </div>
             </div>
         </div>
